<?xml version="1.0"?>
<package>
  <name>pr2_navigation_apps</name>
  <version>1.0.2</version>
  <description>The pr2_navigation_apps package</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_2dnav</run_depend>
  <run_depend>pr2_2dnav_local</run_depend>
  <run_depend>pr2_2dnav_slam</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
